objects/copado__Org__c.object
<CustomObject>
    <fields>
        <fullName>copado__Disable_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this checkbox will not validate the org credentials when the record is saved or viewed.</inlineHelpText>
        <label>Disable Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Error__c</fullName>
        <label>Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Oauth_Signature__c</fullName>
        <label>Oauth Signature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Org_Type__c</fullName>
        <label>Org Type</label>
        <picklist>
            <picklistValues>
                <fullName>Production/Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandbox</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>copado__Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__SFDC_Org_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Org ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copado__Test_Frequency__c</fullName>
        <inlineHelpText>Continuous Integration feature. Run all Apex Test methods and save the results in  the Apex Test Result object to do email alerts or reporting. This feature is quite powerful together with the Git Backups to detect failure-changes automatically.</inlineHelpText>
        <label>Test Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>copado__Token__c</fullName>
        <inlineHelpText>A security token is an automatically generated key that you must use when connecting via the API.</inlineHelpText>
        <label>Security Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Validated_Date__c</fullName>
        <label>Validated Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>